--- a/templates/index.html
+++ b/templates/index.html
@@ -64,6 +64,7 @@
         <ul class="page-options">
             <li><a href="{{ url_for('accounting_login') }}">Accounting</a></li>
             <li><a href="{{ url_for('todo_list_login') }}">TO-DO List</a></li>
+            <li><a href="{{ url_for('storage_login') }}">Storage</a></li>
         </ul>
     </div>
 </body>
