--- a/static/storage.css
+++ b/static/storage.css
@@ -35,6 +35,21 @@ header {
     border-radius: 5px;
 }
 
+button {
+    background-color: crimson;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.2s, color 0.2s;
+    margin-bottom: 10px;
+    padding: 8px 12px;
+    border: none;
+    border-radius: 5px;
+}
+
+button:hover {
+    background-color: red;
+}
+
 .upload-form input[type="file"] {
     background-color: #f5f5f5;
 }
