--- a/templates/storage.html
+++ b/templates/storage.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Gallery</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='storage.css') }}">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -22,9 +24,12 @@
     <div class="image-container">
         {% for image in images %}
         <div class="image-box">
-            <img src="{{ url_for('static', filename='uploads/' + image.filename) }}" alt="{{ image.description }}">
-            <p>{{ image.description }}</p>
-            <a href="{{ url_for('static', filename='uploads/' + image.filename) }}" download>Download</a>
+            <img src="{{ url_for('static', filename='uploads/' + image[2]) }}" alt="{{ image[1] }}">
+            <p>{{ image[1] }}</p>
+            <a href="{{ url_for('static', filename='uploads/' + image[2]) }}" download class="download-link">Download</a>
+            <form action="/delete/{{ image[0] }}" method="POST">
+                <button type="submit" class="delete-button">Delete</button>
+            </form>
         </div>
         {% endfor %}
     </div>
