records code edit

--- a/templates/storage.html
+++ b/templates/storage.html
@@ -32,6 +32,8 @@
             </form>
         </div>
         {% endfor %}
+    <!-- Back Button -->
+    <a href="{{ url_for('index') }}" class="back-button">Main Page</a>
     </div>
 </body>
 </html>
