--- a/static/storage.css
+++ b/static/storage.css
@@ -114,3 +114,16 @@ button:hover {
     font-size: 14px;
     color: #777;
 }
+
+.back-button {
+    text-align: center;
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #333;
+    color: white;
+    text-decoration: none;
+    border-radius: 4px;
+    font-weight: bold;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
