--- a/templates/index.html
+++ b/templates/index.html
@@ -65,6 +65,7 @@
             <li><a href="{{ url_for('accounting_login') }}">Accounting</a></li>
             <li><a href="{{ url_for('todo_list_login') }}">TO-DO List</a></li>
             <li><a href="{{ url_for('storage_login') }}">Storage</a></li>
+            <li><a href="{{ url_for('records_login') }}">Records</a></li>
         </ul>
     </div>
 </body>
