--- a/templates/todo-list.html
+++ b/templates/todo-list.html
@@ -70,10 +70,7 @@
                 {% endfor %}
             </tbody>
         </table>
-
-
-
-
+        <!-- Back Button -->
         <a href="{{ url_for('index') }}" class="back-button">Main Page</a>
     </div>
     <script src="https://kit.fontawesome.com/your-font-awesome-kit.js" crossorigin="anonymous"></script>
