--- a/templates/recordsLogin.html
+++ b/templates/recordsLogin.html
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group btns">
                 <input type="submit" value="Login" class="btn btn-primary">
-                <a href="{{ url_for('storage') }}"><input class="btn" value="Back"></a>
+                <a href="{{ url_for('index') }}"><input class="btn" value="Back"></a>
             </div>
             {% with messages = get_flashed_messages() %}
             {% if messages %}
