--- a/static/storage.css
+++ b/static/storage.css
@@ -1,4 +1,3 @@
-/* Reset some default styles */
 body, h1, p {
     margin: 0;
     padding: 0;
@@ -35,15 +34,14 @@ header {
     border-radius: 5px;
 }
 
-button {
+.button {
     background-color: crimson;
     color: #fff;
     cursor: pointer;
     transition: background-color 0.2s, color 0.2s;
-    margin-bottom: 10px;
-    padding: 8px 12px;
     border: none;
     border-radius: 5px;
+    width: 100%;
 }
 
 button:hover {
@@ -59,10 +57,6 @@ button:hover {
     color: #fff;
     cursor: pointer;
     transition: background-color 0.2s, color 0.2s;
-}
-
-.upload-form button:hover {
-    background-color: #0056b3;
 }
 
 .image-container {
@@ -96,6 +90,11 @@ button:hover {
     transition: transform 0.2s, box-shadow 0.2s;
     cursor: pointer;
     border-radius: 5px;
+    width: 200px; /* Set a fixed width for uniform image size */
+    height: 250px; /* Set a fixed height for uniform image size */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .image-box:hover {
@@ -104,9 +103,9 @@ button:hover {
 }
 
 .image-box img {
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 10px;
+    width: 100%;
+    height: 80%; /* Adjust the height as needed for your design */
+    object-fit: cover;
     border-radius: 5px;
 }
 
