--- a/templates/records.html
+++ b/templates/records.html
@@ -25,6 +25,11 @@
             font-weight: bold;
             margin-top: 20px;
         }
+
+        .btn {
+            background-color: #333333;
+            border: #333333;
+        }
     </style>
 </head>
 <body>
@@ -54,9 +59,10 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th>Usename</th>
+                    <th>Username</th>
                     <th>Password</th>
                     <th>Description</th>
+                    <th>Action</th>
                 </tr>
             </thead>
             <tbody>
@@ -65,6 +71,11 @@
                     <td>{{ record[1] }}</td>
                     <td>{{ record[2] }}</td>
                     <td>{{ record[3] }}</td>
+                    <td>
+                        <form action="/records/delete/{{ record[0] }}" method="POST">
+                            <button type="submit" class="btn btn-danger">Delete</button>
+                        </form>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
