--- a/templates/storage.html
+++ b/templates/storage.html
@@ -18,7 +18,7 @@
         <input type="file" id="image" name="image" required>
         <label for="description">Image Description</label>
         <input type="text" id="description" name="description" required>
-        <button type="submit">Upload</button>
+        <button type="submit" style="background-color: #333333;">Upload</button>
     </form>
     
     <div class="image-container">
@@ -28,12 +28,15 @@
             <p>{{ image[1] }}</p>
             <a href="{{ url_for('static', filename='uploads/' + image[2]) }}" download class="download-link">Download</a>
             <form action="/delete/{{ image[0] }}" method="POST">
-                <button type="submit" class="delete-button">Delete</button>
+                <button type="submit" class="delete-button button">Delete</button>
             </form>
         </div>
         {% endfor %}
-    <!-- Back Button -->
-    <a href="{{ url_for('index') }}" class="back-button">Main Page</a>
+    </div>
+
+    <div style="text-align: center;">
+        <!-- Back Button -->
+        <a href="{{ url_for('index') }}" class="back-button">Main Page</a>
     </div>
 </body>
 </html>
